tests/resource/valid/definition/function_with_if.mamba
def f(x: Int) -> Int =>
    if x > 10 then
        20
    else
        x
