tests/resource/invalid/type/function/return_exp_expr.mamba
def f(x: Int) -> Int =>
    return
